--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^8.2.14",
     "@types/uuid": "^3.4.6",
     "moment": "^2.24.0",
+    "ngx-smart-modal": "^7.3.0",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
