--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start-dev": "ng serve --configuration=dev",
+    "start": "ng serve --configuration=production",
     "build": "ng build",
     "build-prod": "ng build --prod",
     "test": "ng test --code-coverage",
