--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start-dev": "ng serve --configuration=dev",
-    "start": "ng serve --configuration=production",
-    "build": "ng build",
-    "build-prod": "ng build --prod",
+    "start": "ng serve --offline",
+    "build": "ng build --configuration=dev",
+    "build-prod": "ng build --prod --configuration=prod",
     "test": "ng test --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
