--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --offline",
+    "start": "ng serve",
     "build": "ng build --configuration=dev",
     "build-prod": "ng build --prod --configuration=prod",
     "test": "ng test --code-coverage",
@@ -20,13 +20,17 @@
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
+    "@ng-select/ng-select": "^3.7.1",
     "@ngrx/data": "^8.6.0",
     "@ngrx/effects": "^8.6.0",
     "@ngrx/entity": "^8.6.0",
     "@ngrx/router-store": "^8.6.0",
     "@ngrx/store": "^8.6.0",
     "@types/uuid": "^3.4.6",
+    "font-face-generator": "^1.1.1",
     "moment": "^2.24.0",
+    "ng-pick-datetime": "^7.0.0",
+    "ng-pick-datetime-moment": "^1.0.8",
     "ngx-smart-modal": "^7.3.0",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
