refining form controls

--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@ngrx/entity": "^8.6.0",
     "@ngrx/router-store": "^8.6.0",
     "@ngrx/store": "^8.6.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "@types/uuid": "^3.4.6",
     "font-face-generator": "^1.1.1",
+    "intl": "^1.2.5",
     "moment": "^2.24.0",
     "ng-pick-datetime": "^7.0.0",
     "ng-pick-datetime-moment": "^1.0.8",
